<resources>
    <string name="app_name">Single Screen App</string>
    <string name="kipos_aggelon">Κήπος Αγγέλων</string>
    <string name="pictureofthestore">pictureOfTheStore</string>
    <string name="kiposAggelon">Κήπος Αγγέλων</string>
    <string name="biomarket_quality_organic_products">Biomarket - Quality Organic Products</string>
    <string name="organic_food_cosmetics_and_makeup_food_supplements_gluten_free_products_baby_section_green_products_home_care_and_more">Organic food,Cosmetics and Makeup,Food supplements,Gluten Free products,Baby section,Green products,Home Care and more.</string>
    <string name="chiou_18_kato_chalandri_15231">Chiou 18, Kato Chalandri 15231</string>
    <string name="_210_6777114">210 6777114</string>
    <string name="kipos_aggelon_gmail_com">kipos.aggelon@gmail.com</string>
    <string name="www_kiposaggelon_com">www.kiposaggelon.com</string>
    <string name="_Monday_Friday_9_00_20_00_nSaturday_9_00_16_00">Monday-Friday: 9:00-20:00 \nSaturday: 9:00-16:00</string>
</resources>
