<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.singlescreenapp.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.singlescreenapp.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:contentDescription="@string/pictureofthestore"
            android:src="@drawable/biomarket"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kiposAggelon"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="40sp"
            android:background="#a3e198"
            android:fontFamily="serif"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/biomarket_quality_organic_products"
            android:background="#a3e198"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b7f2ae"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/organic_food_cosmetics_and_makeup_food_supplements_gluten_free_products_baby_section_green_products_home_care_and_more"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1e000000"
            android:textColor="#424242"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_place_black_24dp"
            android:text="@string/chiou_18_kato_chalandri_15231" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1e000000"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:text="@string/_210_6777114"
            android:autoLink="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1e000000"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:text="@string/kipos_aggelon_gmail_com"
            android:autoLink="email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1e000000"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_public_black_24dp"
            android:text="@string/www_kiposaggelon_com"
            android:autoLink="web" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="#1e000000"
            android:paddingStart="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_query_builder_black_24dp"
            android:text="@string/_Monday_Friday_9_00_20_00_nSaturday_9_00_16_00" />


    </LinearLayout>

</ScrollView>
